# wcag_checker

./: .gitignore  LICENSE  README.md  example.actions  pyproject.toml  requirements.txt  update_axe_core.py  wcag_checker.spec  wcag_checker_extracted.spec  zip_executable.py
.github/workflows/: build-executable.yml
src/: action_handler.py  arg_parse.py  browser_console_log_handler.py  condition_parser.py  config.py  contrast.py  css.py  ignore_violations.py  input_parser.py  logger_setup.py  main.py  mode_axe.py  mode_own.py  processing.py  recommend_colors.py  report.py  runner_axe.py  runner_contrast.py  runner_custom.py  runner_tab.py  utils.py  youtrack.py
src/actions/: analyse_action.py  click_action.py  cookie_action.py  error_action.py  if_action.py  iframe_action.py  ignore_action.py  include_action.py  input_action.py  navigate_action.py  print_action.py  resize_action.py  screenshot_action.py  script_action.py  upload_action.py  variables_action.py  wait_action.py
src/js/: tabpath-runner.js
src/templates/: html_report.html  markdown_axe_report_template.md  markdown_config_output_template.md  markdown_contrast_report_template.md  markdown_report.md  markdown_results_include_axe.md  markdown_results_include_contrast.md  markdown_results_include_tab.md
tests/: test_actions.py  test_condition_parser.py  test_input_parser.py  test_variables.py
