[project]
name = "wcag-checker"
version = "0.1.0"
description = "Tool to check WCAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "jinja2>=3.1.6",
    "mistune>=3.1.3",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyinstaller>=6.13.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "rich-argparse>=1.7.0",
    "scikit-learn>=1.6.1",
    "selenium>=4.32.0",
    "selenium-axe-python>=2.2.0",
]
